fix too long contact info text in ClientsList

--- a/src/main/resources/src/components/MainPage/Clients/Clients.scss
+++ b/src/main/resources/src/components/MainPage/Clients/Clients.scss
@@ -69,6 +69,12 @@
 
   .main-window__list-item {
     span {
+      &:nth-child(3) {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
       &:nth-child(4) {
         display: -webkit-box;
         -webkit-line-clamp: 3;
